--- a/AirQuality/air-quality/docker-compose.yml
+++ b/AirQuality/air-quality/docker-compose.yml
@@ -24,9 +24,31 @@ services:
             - sail
         depends_on:
             - mysql
-            - redis
+#            - redis
+        container_name: laravel
+    nginx:
+        image: nginx:latest
+        volumes:
+            - ./:/var/www
+            - ./_docker/nginx/conf.d:/etc/nginx/conf.d
+        ports:
+            - 8088:80
+        depends_on:
+            - app
+            - laravel.test
+        container_name: nginx
+    app:
+        build:
+            context: .
+            dockerfile: _docker/app/Dockerfile
+        volumes:
+            - ./:/var/www
+        depends_on:
+            - mysql
+        container_name: php
     mysql:
         image: 'mysql/mysql-server:8.0'
+        restart: always
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -45,23 +67,24 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sail-redis:/data'
-        networks:
-            - sail
-        healthcheck:
-            test: ["CMD", "redis-cli", "ping"]
-            retries: 3
-            timeout: 5s
+        container_name: mysql
+#    redis:
+#        image: 'redis:alpine'
+#        ports:
+#            - '${FORWARD_REDIS_PORT:-6379}:6379'
+#        volumes:
+#            - 'sail-redis:/data'
+#        networks:
+#            - sail
+#        healthcheck:
+#            test: ["CMD", "redis-cli", "ping"]
+#            retries: 3
+#            timeout: 5s
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mysql:
         driver: local
-    sail-redis:
-        driver: local
+#    sail-redis:
+#        driver: local
