--- a/AirQuality/air-quality/docker-compose.yml
+++ b/AirQuality/air-quality/docker-compose.yml
@@ -55,8 +55,8 @@ services:
             MYSQL_ROOT_PASSWORD: 1111
 #            MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: air_quality
-#            MYSQL_USER: '${DB_USERNAME}'
-#            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
 #            MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'sail-mysql:/var/lib/mysql'
